# python-Afloclient

./: .coveragerc  .gitignore  .testr.conf  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini
afloclient/: __init__.py  _i18n.py  client.py  client_const.py  config.py  exc.py  shell.py
afloclient/common/: http.py  https.py  progressbar.py  utils.py
afloclient/openstack/common/: _i18n.py
afloclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
afloclient/tests/functional/: base.py  client.py  test_catalog_contents.py  test_catalog_scope.py  test_catalogs.py  test_common.py  test_contracts.py  test_goods.py  test_prices.py  test_tickettemplates.py  test_tikets.py  test_valid_catalog.py  test_workflowpatterns.py
afloclient/tests/functional/operation_definition_files/: ticket_template_contents_001_20160627.json  ticket_template_contents_002_20160627.json  ticket_template_contents_003_20160627.json  ticket_template_contents_004_20160627.json  (+7 more)
afloclient/tests/unit/: keystone_client_fixtures.py  test_client.py  test_exc.py  test_shell.py  utils.py
afloclient/v1/: __init__.py  catalog_contents.py  catalog_scope.py  catalogs.py  client.py  contracts.py  goods.py  price.py  shell.py  tickets.py  tickettemplates.py  valid_catalog.py  workflowpatterns.py
doc/source/: conf.py  index.rst
doc/source/man/: aflo.rst
etc/afloclient/: README.afloclient.conf
etc/oslo-config-generator/: afloclient.conf
tools/: aflo.bash_completion
(+19 files in other folders)
