[metadata]
name = python-afloclient
summary = OpenStack Aflo API Client Library
description-file =
    README.rst
license = Apache License, Version 2.0
author = NEC CORPORATION
author-email = aaa@bbb
home-page = http://www.openstack.org/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Redhat Linux
    Programming Language :: Python

[files]
packages =
    afloclient

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    aflo = afloclient.shell:main
oslo.config.opts =
    afloclient.config = afloclient.config:list_opts

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[wheel]
universal = 1
